# pytest-freezer

./: LICENSE  README.md  README.rst  pyproject.toml  pytest_freezer.py
.github/workflows/: tests.yml
tests/: test_plugin.py
