[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest_freezer"
authors = [{name = "Wim Glenn", email = "hey@wimglenn.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest",
]
version = "0.4.7"
dependencies = ["pytest >= 3.6", "freezegun >= 1.0"]
requires-python = ">= 3.6"
readme = "README.rst"
description = "Pytest plugin providing a fixture interface for spulec/freezegun"

[project.urls]
Homepage = "https://github.com/pytest-dev/pytest-freezer"

[project.entry-points.pytest11]
freezer = "pytest_freezer"

[tool.hatch.build]
include = [
    "LICENSE",
    "README.rst",
    "pyproject.toml",
    "pytest_freezer.py",
    "/tests",
]
exclude = [
    ".coverage",
    ".idea",
    ".pytest_cache",
    ".venv",
]
